# ws-audiod

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: build.yml
config/: ws-audiod.conf  ws-audiod.service
debian/: audio_consumer.1  audio_mon.1  audiod-mon.1  changelog  clip_client.1  control  copyright  rules  ws-audiod.1  ws-audiod.maintscript  ws-audiod.manpages  ws-audiod.postinst  ws-audiod.service
debian/source/: options
examples/: audio_client.py  audio_consumer.cpp  audio_mon.cpp  audiod-mon.cpp  clip_client.cpp
include/audio_daemon/: alsa_capture.hpp  block_recorder.hpp  capture_pipeline.hpp  clip_extractor.hpp  common.hpp  control_socket.hpp  daemon.hpp  logger.hpp  ring_buffer.hpp  sample_publisher.hpp  version.hpp.in
python/ws_audiod/: __init__.py
src/: main.cpp
src/capture/: alsa_capture.cpp  block_recorder.cpp  clip_extractor.cpp  ring_buffer.cpp
src/pipeline/: capture_pipeline.cpp
src/sharing/: sample_publisher.cpp
src/utils/: config.cpp  control_socket.cpp
tests/: CMakeLists.txt  integration_test.sh  test_common.cpp  test_config.cpp  test_control_socket.cpp  test_mic_boost.cpp  test_ring_buffer.cpp
